Add /cameras page from original BoatCam project

--- a/public/stylesheets/globals/config.less
+++ b/public/stylesheets/globals/config.less
@@ -1,2 +1,8 @@
 @navigation-height: 40px; //51px
+
+@field-height: 30px;
+
+@status-indicator-size: 24px;
+@status-indicator-small-size: 14px;
+
 @content-width: 800px;
