--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,7 @@ html
 	head
 		meta(charset='utf-8')
 		title= title
+		script(type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js")
 		block stylesheets
 		link(rel='stylesheet', href='/stylesheets/style.css')
 		block scripts
