--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,6 +7,7 @@ html
 		title= title
 		script(type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js")
 		block stylesheets
+		link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css")
 		link(rel='stylesheet', href='/stylesheets/style.css')
 		block scripts
 	body
