Add /admin/cameras page from original BoatCam project

--- a/public/stylesheets/layout/layout.less
+++ b/public/stylesheets/layout/layout.less
@@ -49,3 +49,10 @@ a:link, a:visited, a:hover, a:active  {
 	font-weight: bold;
 	margin-bottom: 15px;
 }
+
+.page-footer {
+	margin-top: 45px;
+	button, input {
+		margin-right: 10px;
+	}
+}
