Add /admin/cameras/:cameraId and new pages from original BoatCam project

--- a/public/stylesheets/layout/layout.less
+++ b/public/stylesheets/layout/layout.less
@@ -56,3 +56,42 @@ a:link, a:visited, a:hover, a:active  {
 		margin-right: 10px;
 	}
 }
+
+
+.error {
+	color: red;
+}
+
+input[type="text"] {
+	width: 120px;
+}
+
+.field {
+	height: @field-height;
+
+	label {
+		display: inline-block;
+		line-height: @field-height;
+		width: 120px;
+	}
+
+	input {
+	}
+}
+
+
+.wide {
+	min-width: 340px;
+}
+
+.narrow {
+	width: 60px;
+}
+
+i:hover {
+	//color: red;
+}
+
+.pull-right {
+	float: right;
+}
