Refactor 'fill form' code into utils.js

--- a/views/admin/camera.jade
+++ b/views/admin/camera.jade
@@ -53,4 +53,5 @@ block content
 
 block scripts
 	script(src="/socket.io/socket.io.js")
+	script(src="/javascripts/utils.js")
 	script(src="/javascripts/admin/camera-page.js")
