--- a/views/admin/berths.jade
+++ b/views/admin/berths.jade
@@ -10,4 +10,5 @@ block content
 		a.btn.btn-success(href="berths/new") Create new
 
 block scripts
+	script(src="/javascripts/api.js")
 	script(src="/javascripts/berths-page.js")
