--- a/views/admin/camera.jade
+++ b/views/admin/camera.jade
@@ -14,6 +14,7 @@ block content
 			a.camera-shortcut.pull-right(target="_blank")
 				i.fa.fa-external-link
 	form
+		input(type="hidden" name="id")
 		.field
 			label Enabled:
 			input#enabled(type="checkbox" name="enabled" value="true")
@@ -54,4 +55,5 @@ block content
 block scripts
 	script(src="/socket.io/socket.io.js")
 	script(src="/javascripts/utils.js")
+	script(src="/javascripts/api.js")
 	script(src="/javascripts/admin/camera-page.js")
