--- a/views/cameras.jade
+++ b/views/cameras.jade
@@ -9,4 +9,5 @@ block content
 
 block scripts
 	script(src="/socket.io/socket.io.js")
+	script(src="/javascripts/api.js")
 	script(src="/javascripts/cameras-page.js")
