--- a/views/mixins.jade
+++ b/views/mixins.jade
@@ -1,5 +1,5 @@
 mixin breadcrumb(...route)
-	- var levelNames = { admin: "Admin", berths: "Berths", cameras: "Cameras", profile: "Profile" }
+	- var levelNames = { admin: "Admin", berths: "Berths", cameras: "Cameras", profile: "Profile", users: "Users" }
 	- var path = "";
 	ul
 		li
