--- a/views/examples/example1.jade
+++ b/views/examples/example1.jade
@@ -3,4 +3,22 @@ html
 	head
 		meta(charset='utf-8')
 		title= title
+		script(src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js")
+		script(src="/socket.io/socket.io.js")
+		script(src="/javascripts/flowplayer/flowplayer-3.2.13.min.js")
+		// Import following scripts
+		script(src="/javascripts/config.js")
+		script(src="/javascripts/player.js")
+		script(src="/javascripts/camera.js")
+		script(src="/javascripts/utils.js")
+		script(src="/javascripts/api.js")
+		// Custom script for this page
+		script(src="/javascripts/examples/example1-page.js")
+		link(rel='stylesheet', href='/stylesheets/examples/style.css')
 	body
+		.camera-status-indicator
+		select.cameras-select(name=cameras)
+		.video#player
+		.camera-position
+		.btn.fullscreen-btn Fullscreen
+		.btn.snapshot-btn Snapshot
