Add 'Simple Example', rename existing to 'Multiple Cameras'

--- a/views/examples/index.jade
+++ b/views/examples/index.jade
@@ -5,8 +5,8 @@ block navigation
 
 block content
 	.page-header
-		a(href="/examples/example1") Example 1
+		a(href="/examples/simple-example") Simple Example
 	.page-header
-		a(href="/examples/example2") Example 2
-	.page-header
+		a(href="/examples/multiple-cameras-example") Multiple Cameras
+	//-.page-header
 		a(href="/examples/example3") Example 3
