--- a/views/examples/multiple-cameras-example.jade
+++ b/views/examples/multiple-cameras-example.jade
@@ -13,12 +13,12 @@ html
 		script(src="/javascripts/utils.js")
 		script(src="/javascripts/api.js")
 		// Custom script for this page
-		script(src="/javascripts/examples/example1-page.js")
-		link(rel='stylesheet', href='/stylesheets/examples/style.css')
+		script(src="/javascripts/examples/multiple-cameras-example-page.js")
+		link(rel='stylesheet', href='/stylesheets/examples/multiple-cameras-example.css')
 	body
 		.camera-status-indicator
 		select.cameras-select(name=cameras)
 		.video#player
 		.camera-position
-		.btn.fullscreen-btn Fullscreen
-		.btn.snapshot-btn Snapshot
+		//- .btn.fullscreen-btn Fullscreen
+		//- .btn.snapshot-btn Snapshot
