--- a/public/stylesheets/examples/simple-example.less
+++ b/public/stylesheets/examples/simple-example.less
@@ -10,21 +10,6 @@ body {
 	height: 450px; //288px; // 330px
 }
 
-select {
-	padding: 6px 12px;
-	border-radius: 4px;
-	font-size: 18px;
-	font-weight: bold;
-	border: none;
-	cursor: pointer;
-
-	&:hover, &:active, &:focus {
-		//border:none;
-		outline:none;
-		//background-color: #ddd;
-		border-color: #aaa;
-	}
-}
 
 .btn {
 	//min-width: 80px;
@@ -33,11 +18,10 @@ select {
 	text-align: center;
 	vertical-align: middle;
 	cursor: pointer;
-	border: 1px solid transparent;
+	//border: 1px solid transparent;
+	border: none;
 	padding: 6px 12px;
 	border-radius: 4px;
-	border: none;
-
 
 	color: #fff;
 	background-color: #5cb85c;
