--- a/public/stylesheets/inputs/buttons.less
+++ b/public/stylesheets/inputs/buttons.less
@@ -8,11 +8,12 @@
 	vertical-align: middle;
 	cursor: pointer;
 	background-image: none;
-	border: 1px solid transparent;
 	white-space: nowrap;
 	padding: 6px 12px;
 	font-size: 14px;
 	line-height: 1.42857143;
+
+	//border: 1px solid transparent;
 	border-radius: 4px;
 	border: none;
 
