Enable 'snapshot' button for 'Multiple Cameras' example

--- a/views/examples/multiple-cameras-example.jade
+++ b/views/examples/multiple-cameras-example.jade
@@ -21,4 +21,4 @@ html
 		.video#player
 		.camera-position
 		//- .btn.fullscreen-btn Fullscreen
-		//- .btn.snapshot-btn Snapshot
+		.btn.snapshot-btn Snapshot
