Api auth + login page

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,11 +5,14 @@ html
 	head
 		meta(charset='utf-8')
 		title= title
-		script(type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js")
-		script(type="text/javascript" src="/javascripts/config.js")
 		block stylesheets
 		link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css")
 		link(rel='stylesheet', href='/stylesheets/style.css')
+		script(src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js")
+		script(src="/javascripts/config.js")
+		script(src="/javascripts/auth.js")
+		script(src="/javascripts/api.js")
+		script(src="/javascripts/boatcam-api.js")
 		block scripts
 	body
 		.navigation
