Use new BoatCam Api for example pages. Auth support

--- a/views/examples/multiple-cameras-example.jade
+++ b/views/examples/multiple-cameras-example.jade
@@ -11,7 +11,9 @@ html
 		script(src="/javascripts/player.js")
 		script(src="/javascripts/camera.js")
 		script(src="/javascripts/utils.js")
+		script(src="/javascripts/auth.js")
 		script(src="/javascripts/api.js")
+		script(src="/javascripts/boatcam-api.js")
 		// Custom script for this page
 		script(src="/javascripts/examples/multiple-cameras-example-page.js")
 		link(rel='stylesheet', href='/stylesheets/examples/multiple-cameras-example.css')
