Hide border around profile page 'role' field

--- a/public/stylesheets/layout/base.less
+++ b/public/stylesheets/layout/base.less
@@ -48,3 +48,12 @@ a:hover, a:active, a:focus, a:visited {
 	//outline-offset: -1px !important;
 	//outline: 1px solid rgba(0, 0, 255, 0.2) !important;
 }
+
+.readonly {
+	.user-select(none);
+}
+
+.selectable {
+	.user-select(text);
+	cursor: text;
+}
