Add logout button to menu bar

--- a/views/mixins.jade
+++ b/views/mixins.jade
@@ -12,6 +12,8 @@ mixin breadcrumb(...route)
 	ul.pull-right
 		li
 			a.profile(href="/profile")
+		li
+			a.logout(href="/logout") Log out
 
 mixin tracker()
 	script.
