Use 'id' without underscore prefix

--- a/views/camera.jade
+++ b/views/camera.jade
@@ -47,7 +47,7 @@ block scripts
 				slug: "#{camera.slug}",
 				url:  "#{uri.substr(0, slash)}",
 				stream: "#{uri.substr(slash + 1)}",
-				cameraId: "#{camera._id}",
+				cameraId: "#{camera.id}",
 				enabled: #{camera.enabled}
 			}
 	script(src="/socket.io/socket.io.js")
