Support delete berth-user on admin 'User' and 'Berth' pages

--- a/views/admin/user.jade
+++ b/views/admin/user.jade
@@ -35,7 +35,7 @@ block content
 	if !newUserPage
 		.field
 		h3 Berths
-		ul.camera-positions-list
+		ul.camera-list.berths-list
 
 block scripts
 	script(src="/javascripts/utils.js")
