Support addition of berths to a user

--- a/views/admin/user.jade
+++ b/views/admin/user.jade
@@ -36,6 +36,10 @@ block content
 		.field
 		h3 Berths
 		ul.camera-list.berths-list
+		select.berths-select
+			option(value="" hidden disabled selected) Select berth
+		button.add-berth.btn.btn-success(type="button") Add berth
+
 
 block scripts
 	script(src="/javascripts/utils.js")
