Support addition of users to a berth

--- a/views/admin/berth.jade
+++ b/views/admin/berth.jade
@@ -24,6 +24,9 @@ block content
 		.field
 		h3 Users
 		ul.camera-list.users-list
+		select.users-select
+			option(value="" hidden disabled selected) Select user
+		button.add-user.btn.btn-success(type="button") Add user
 		.field
 		h3 Positions
 		ul.camera-list.berth-positions-list
