New Flowplayer HTML5 Example

--- a/views/examples/index.jade
+++ b/views/examples/index.jade
@@ -8,5 +8,5 @@ block content
 		a(href="/examples/simple-example") Simple Example
 	.page-header
 		a(href="/examples/multiple-cameras-example") Multiple Cameras
-	//-.page-header
-		a(href="/examples/example3") Example 3
+	.page-header
+		a(href="/examples/flowplayer-html5-example/fjellebroen-ost") Flowplayer HTML5
