Uncommitted changes as of Feb 3rd 2021

--- a/views/examples/index.jade
+++ b/views/examples/index.jade
@@ -10,3 +10,5 @@ block content
 		a(href="/examples/multiple-cameras-example") Multiple Cameras
 	.page-header
 		a(href="/examples/flowplayer-html5-example/fjellebroen-ost") Flowplayer HTML5
+	.page-header
+		a(href="/examples/video-js-example/fjellebroen-ost") Video.js Example
